# httpx-aws-auth

./: README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci.yml  release.yml
httpx_aws_auth/: __init__.py
src/aiohttp_aws_auth/: __init__.py
src/httpx_aws_auth/: __init__.py
tests/: test_aws_sigv4_assume_role_auth.py  test_aws_sigv4_auth.py
